[gd_scene load_steps=18 format=3 uid="uid://datcydt1gx3u0"]

[ext_resource type="Script" uid="uid://dyb8npqlf2mdg" path="res://entities/npcs/npc_badguy.gd" id="1_ns7rk"]
[ext_resource type="Material" uid="uid://cnq7n26g77h12" path="res://materials/tools/direction_indicator.tres" id="3_jogsh"]
[ext_resource type="Material" uid="uid://cyg8rtd0p220l" path="res://materials/tools/danger_indicator.tres" id="3_op6lu"]
[ext_resource type="PackedScene" uid="uid://cp50t44nb5ryp" path="res://scripts/enemy_stats.tscn" id="4_uvri3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kuily"]
radius = 0.35

[sub_resource type="CylinderMesh" id="CylinderMesh_clyg5"]
material = ExtResource("3_jogsh")
top_radius = 0.15
bottom_radius = 0.0
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vr258"]
albedo_color = Color(0.870588, 0.156863, 0.156863, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ldam2"]
material = SubResource("StandardMaterial3D_vr258")
radius = 0.35

[sub_resource type="PrismMesh" id="PrismMesh_jogsh"]
material = ExtResource("3_op6lu")
size = Vector3(0.49, 1, 0.01)

[sub_resource type="TorusMesh" id="TorusMesh_clyg5"]
material = ExtResource("3_op6lu")
inner_radius = 0.6
outer_radius = 0.7
rings = 16
ring_segments = 4

[sub_resource type="TextMesh" id="TextMesh_op6lu"]
material = ExtResource("3_op6lu")
text = "ðŸ˜­"
pixel_size = 0.028

[sub_resource type="SphereShape3D" id="SphereShape3D_6svnj"]
radius = 8.0

[sub_resource type="AnimationRootNode" id="AnimationRootNode_jogsh"]

[sub_resource type="Animation" id="Animation_l4v3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_clyg5"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(-1, 0.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.7, 0), Vector3(-1.7, 0.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.5708)]
}

[sub_resource type="Animation" id="Animation_jogsh"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t8x1e"]
_data = {
&"RESET": SubResource("Animation_l4v3p"),
&"death": SubResource("Animation_clyg5"),
&"idle": SubResource("Animation_jogsh")
}

[node name="npc_badguy" type="CharacterBody3D" groups=["Hostile1", "NPC"]]
collision_mask = 272
script = ExtResource("1_ns7rk")

[node name="EnemyStats" parent="." instance=ExtResource("4_uvri3")]
max_health = 20

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.45

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kuily")

[node name="Body" type="Node3D" parent="."]

[node name="LockOnIndicator" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.44635, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_clyg5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ldam2")
skeleton = NodePath("../../CollisionShape3D")

[node name="DirectionIndicator" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="arrow" type="MeshInstance3D" parent="Body/DirectionIndicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1.10515)
gi_mode = 0
mesh = SubResource("PrismMesh_jogsh")

[node name="ring" type="MeshInstance3D" parent="Body/DirectionIndicator"]
gi_mode = 0
mesh = SubResource("TorusMesh_clyg5")
skeleton = NodePath("../arrow")

[node name="Head" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.423752)
mesh = SubResource("TextMesh_op6lu")

[node name="SightRange" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
shape = SubResource("SphereShape3D_6svnj")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_jogsh")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t8x1e")
}
autoplay = "idle"

[connection signal="health_changed" from="EnemyStats" to="." method="_on_enemy_stats_health_changed"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_enemy_stats_no_health"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
